fixed overflowing artist name and album title in their respective view in landscape mode

--- a/src/components/views/album-view.sass
+++ b/src/components/views/album-view.sass
@@ -26,6 +26,7 @@
       flex-direction: column
       @media (orientation: landscape)
         overflow: auto
+        width: 22em
 
       border: 0 solid rgb(50, 50, 50)
       border-right-width: 1px
