--- a/src/components/views/artist-view.sass
+++ b/src/components/views/artist-view.sass
@@ -28,6 +28,7 @@
       border-right-width: 1px
       @media (orientation: landscape)
         overflow: auto
+        width: 18em
 
       padding: 2em 2em 0 2em
 
